# memory-safe-systems-programming-with-rust-and-ai-2743193

./: README.md
.devcontainer/: devcontainer.json
chapter1/: 01_03_introduction_to_lifetimes  borrowing_example.rs  ownership_move.rs  rust_reference_rules.rs
chapter1/01_01_understanding_ownership/: ownership_move_example.rs
chapter1/01_02_borrowing_and_references/: mutable_borrowing.rs  ref_rules.rs
chapter1/01_04_smart_pointer_examples/: Cargo.toml
chapter1/01_04_smart_pointer_examples/src/examples/: box_examples.rs  custom_smart_pointer.rs  rc_examples.rs  refcell_examples.rs  weak_examples.rs
chapter1/mini-challenge-file-reader/: Cargo.toml
chapter1/mini-challenge-file-reader/src/: main.rs
chapter_02_memory_safe_ai/01_intro_ai_integration/: Cargo.toml  ai_rust_integration.rs
chapter_02_memory_safe_ai/01_intro_ai_integration/src/: main.rs
chapter_02_memory_safe_ai/02_02_setting_up_api_call/: Cargo.toml  Readme.md
chapter_02_memory_safe_ai/02_02_setting_up_api_call/src/: main.rs
chapter_02_memory_safe_ai/03_ensuring_safety_in_ai_workflows/: Cargo.toml  ai_safety_workflow.rs
chapter_02_memory_safe_ai/04_text_analyzer_demo/: Cargo.toml
chapter_02_memory_safe_ai/04_text_analyzer_demo/src/: main.rs
chapter_03_ai_assisted_debugging/01_common_memory_safety_pitfalls/: use_after_move_ai_data.rs
chapter_03_ai_assisted_debugging/02_debugging_with_github_copilot/: Cargo.toml  Readme.md
chapter_03_ai_assisted_debugging/02_debugging_with_github_copilot/src/examples/: error_handling.rs  logic_errors.rs  off_by_one.rs  ownership_issues.rs  testing_examples.rs
chapter_03_ai_assisted_debugging/03-04-refactor-optimize/: Cargo.toml
(+6 files in other folders)
